Main/src/main/java/com/demo/lexerAndParser/PythonG3Parser.java
// Generated from C:/Users/bartw/OneDrive/Pulpit/Kompilator/Main/src/main/grammar\PythonG3.g4 by ANTLR 4.10.1
package com.demo.lexerAndParser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PythonG3Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TRUE=1, FALSE=2, NULL=3, IF=4, ELSE=5, ELSE_IF=6, FOR=7, WHILE=8, CONTINUE=9, 
		BREAK=10, CONST_AND=11, CONST_OR=12, NEGATION=13, IN=14, PLUS=15, MINUS=16, 
		MULTIPLICATION=17, DIVISION=18, MODULO=19, EQUALITY=20, INEQUALITY=21, 
		GREATER=22, GREATER_OR_EQUAL=23, SMALLER=24, SMALLER_OR_EQUAL=25, ASSIGNMENT=26, 
		LEFT_PARENTHESIS=27, RIGHT_PARENTHESIS=28, COLON=29, INCREASE_ADD=30, 
		DECREASE_SUBSTRACT=31, INCREASE_MULTIPLY=32, DECREASE_DIVISION=33, DECREASE_MODULO=34, 
		LEFT_BRACKET=35, RIGHT_BRACKET=36, SEPARATOR=37, LEFT_CURLY=38, RIGHT_CURLY=39, 
		STRING=40, STRING_LITERAL=41, NEWLINE=42, INT=43, FLOAT=44, VARIABLE=45, 
		WS=46, INCORECT_CHAR=47;
	public static final int
		RULE_file_input = 0, RULE_statement = 1, RULE_simple_statement = 2, RULE_assign_statement = 3, 
		RULE_expression = 4, RULE_conjunction = 5, RULE_inversion = 6, RULE_comparative = 7, 
		RULE_comparative_tail = 8, RULE_comparative_less = 9, RULE_comparative_eq_less = 10, 
		RULE_comparative_more = 11, RULE_comparative_eq_more = 12, RULE_comparative_eq = 13, 
		RULE_sum = 14, RULE_mult = 15, RULE_atom = 16, RULE_increment_statement = 17, 
		RULE_block_statement = 18, RULE_while_statement = 19, RULE_if_statement = 20, 
		RULE_for_statement = 21, RULE_table = 22, RULE_list_of_variables = 23, 
		RULE_block = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"file_input", "statement", "simple_statement", "assign_statement", "expression", 
			"conjunction", "inversion", "comparative", "comparative_tail", "comparative_less", 
			"comparative_eq_less", "comparative_more", "comparative_eq_more", "comparative_eq", 
			"sum", "mult", "atom", "increment_statement", "block_statement", "while_statement", 
			"if_statement", "for_statement", "table", "list_of_variables", "block"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'True'", "'False'", "'None'", "'if'", "'else'", "'elif'", "'for'", 
			"'while'", "'continue'", "'break'", "'and'", "'or'", "'not'", "'in'", 
			"'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", "'>'", "'>='", "'<'", 
			"'<='", "'='", "'('", "')'", "':'", "'+='", "'-='", "'*='", "'/='", "'%='", 
			"'['", "']'", "','", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TRUE", "FALSE", "NULL", "IF", "ELSE", "ELSE_IF", "FOR", "WHILE", 
			"CONTINUE", "BREAK", "CONST_AND", "CONST_OR", "NEGATION", "IN", "PLUS", 
			"MINUS", "MULTIPLICATION", "DIVISION", "MODULO", "EQUALITY", "INEQUALITY", 
			"GREATER", "GREATER_OR_EQUAL", "SMALLER", "SMALLER_OR_EQUAL", "ASSIGNMENT", 
			"LEFT_PARENTHESIS", "RIGHT_PARENTHESIS", "COLON", "INCREASE_ADD", "DECREASE_SUBSTRACT", 
			"INCREASE_MULTIPLY", "DECREASE_DIVISION", "DECREASE_MODULO", "LEFT_BRACKET", 
			"RIGHT_BRACKET", "SEPARATOR", "LEFT_CURLY", "RIGHT_CURLY", "STRING", 
			"STRING_LITERAL", "NEWLINE", "INT", "FLOAT", "VARIABLE", "WS", "INCORECT_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PythonG3.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PythonG3Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class File_inputContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PythonG3Parser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(PythonG3Parser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PythonG3Parser.NEWLINE, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public File_inputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonG3Listener ) ((PythonG3Listener)listener).enterFile_input(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonG3Listener ) ((PythonG3Listener)listener).exitFile_input(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonG3Visitor ) return ((PythonG3Visitor<? extends T>)visitor).visitFile_input(this);
			else return visitor.visitChildren(this);
		}
	}

	public final File_inputContext file_input() throws RecognitionException {
		File_inputContext _localctx = new File_inputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << CONTINUE) | (1L << BREAK) | (1L << NEWLINE) | (1L << VARIABLE))) != 0)) {
				{
				setState(52);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NEWLINE:
					{
					setState(50);
					match(NEWLINE);
					}
					break;
				case IF:
				case FOR:
				case WHILE:
				case CONTINUE:
				case BREAK:
				case VARIABLE:
					{
					setState(51);
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Simple_statementContext simple_statement() {
			return getRuleContext(Simple_statementContext.class,0);
		}
		public Block_statementContext block_statement() {
			return getRuleContext(Block_statementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonG3Listener ) ((PythonG3Listener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonG3Listener ) ((PythonG3Listener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonG3Visitor ) return ((PythonG3Visitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONTINUE:
			case BREAK:
			case VARIABLE:
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				simple_statement();
				}
				break;
			case IF:
			case FOR:
			case WHILE:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				block_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Simple_statementContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(PythonG3Parser.NEWLINE, 0); }
		public Increment_statementContext increment_statement() {
			return getRuleContext(Increment_statementContext.class,0);
		}
		public Assign_statementContext assign_statement() {
			return getRuleContext(Assign_statementContext.class,0);
		}
		public TerminalNode CONTINUE() { return getToken(PythonG3Parser.CONTINUE, 0); }
		public TerminalNode BREAK() { return getToken(PythonG3Parser.BREAK, 0); }
		public Simple_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonG3Listener ) ((PythonG3Listener)listener).enterSimple_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonG3Listener ) ((PythonG3Listener)listener).exitSimple_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonG3Visitor ) return ((PythonG3Visitor<? extends T>)visitor).visitSimple_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Simple_statementContext simple_statement() throws RecognitionException {
		Simple_statementContext _localctx = new Simple_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_simple_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(63);
				increment_statement();
				}
				break;
			case 2:
				{
				setState(64);
				assign_statement();
				}
				break;
			case 3:
				{
				setState(65);
				match(CONTINUE);
				}
				break;
			case 4:
				{
				setState(66);
				match(BREAK);
				}
				break;
			}
			setState(69);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_statementContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<TerminalNode> VARIABLE() { return getTokens(PythonG3Parser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(PythonG3Parser.VARIABLE, i);
		}
		public List<TerminalNode> ASSIGNMENT() { return getTokens(PythonG3Parser.ASSIGNMENT); }
		public TerminalNode ASSIGNMENT(int i) {
			return getToken(PythonG3Parser.ASSIGNMENT, i);
		}
		public Assign_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonG3Listener ) ((PythonG3Listener)listener).enterAssign_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonG3Listener ) ((PythonG3Listener)listener).exitAssign_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonG3Visitor ) return ((PythonG3Visitor<? extends T>)visitor).visitAssign_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assign_statementContext assign_statement() throws RecognitionException {
		Assign_statementContext _localctx = new Assign_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assign_statement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(73); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(71);
					match(VARIABLE);
					setState(72);
					match(ASSIGNMENT);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(75); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(77);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ConjunctionContext conjunction() {
			return getRuleContext(ConjunctionContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode CONST_OR() { return getToken(PythonG3Parser.CONST_OR, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonG3Listener ) ((PythonG3Listener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonG3Listener ) ((PythonG3Listener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonG3Visitor ) return ((PythonG3Visitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(80);
			conjunction(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(87);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExpressionContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_expression);
					setState(82);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(83);
					match(CONST_OR);
					setState(84);
					conjunction(0);
					}
					} 
				}
				setState(89);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ConjunctionContext extends ParserRuleContext {
		public InversionContext inversion() {
			return getRuleContext(InversionContext.class,0);
		}
		public ConjunctionContext conjunction() {
			return getRuleContext(ConjunctionContext.class,0);
		}
		public TerminalNode CONST_AND() { return getToken(PythonG3Parser.CONST_AND, 0); }
		public ConjunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conjunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonG3Listener ) ((PythonG3Listener)listener).enterConjunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonG3Listener ) ((PythonG3Listener)listener).exitConjunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonG3Visitor ) return ((PythonG3Visitor<? extends T>)visitor).visitConjunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConjunctionContext conjunction() throws RecognitionException {
		return conjunction(0);
	}

	private ConjunctionContext conjunction(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ConjunctionContext _localctx = new ConjunctionContext(_ctx, _parentState);
		ConjunctionContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_conjunction, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(91);
			inversion();
			}
			_ctx.stop = _input.LT(-1);
			setState(98);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ConjunctionContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_conjunction);
					setState(93);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(94);
					match(CONST_AND);
					setState(95);
					inversion();
					}
					} 
				}
				setState(100);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class InversionContext extends ParserRuleContext {
		public TerminalNode NEGATION() { return getToken(PythonG3Parser.NEGATION, 0); }
		public InversionContext inversion() {
			return getRuleContext(InversionContext.class,0);
		}
		public ComparativeContext comparative() {
			return getRuleContext(ComparativeContext.class,0);
		}
		public InversionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inversion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonG3Listener ) ((PythonG3Listener)listener).enterInversion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonG3Listener ) ((PythonG3Listener)listener).exitInversion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonG3Visitor ) return ((PythonG3Visitor<? extends T>)visitor).visitInversion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InversionContext inversion() throws RecognitionException {
		InversionContext _localctx = new InversionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_inversion);
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NEGATION:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				match(NEGATION);
				setState(102);
				inversion();
				}
				break;
			case TRUE:
			case FALSE:
			case NULL:
			case LEFT_PARENTHESIS:
			case STRING:
			case INT:
			case FLOAT:
			case VARIABLE:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				comparative();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparativeContext extends ParserRuleContext {
		public SumContext sum() {
			return getRuleContext(SumContext.class,0);
		}
		public Comparative_tailContext comparative_tail() {
			return getRuleContext(Comparative_tailContext.class,0);
		}
		public ComparativeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparative; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonG3Listener ) ((PythonG3Listener)listener).enterComparative(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonG3Listener ) ((PythonG3Listener)listener).exitComparative(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonG3Visitor ) return ((PythonG3Visitor<? extends T>)visitor).visitComparative(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComparativeContext comparative() throws RecognitionException {
		ComparativeContext _localctx = new ComparativeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_comparative);
		try {
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				sum(0);
				setState(107);
				comparative_tail();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				sum(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Comparative_tailContext extends ParserRuleContext {
		public Comparative_lessContext comparative_less() {
			return getRuleContext(Comparative_lessContext.class,0);
		}
		public Comparative_eq_lessContext comparative_eq_less() {
			return getRuleContext(Comparative_eq_lessContext.class,0);
		}
		public Comparative_moreContext comparative_more() {
			return getRuleContext(Comparative_moreContext.class,0);
		}
		public Comparative_eq_moreContext comparative_eq_more() {
			return getRuleContext(Comparative_eq_moreContext.class,0);
		}
		public Comparative_eqContext comparative_eq() {
			return getRuleContext(Comparative_eqContext.class,0);
		}
		public Comparative_tailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparative_tail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonG3Listener ) ((PythonG3Listener)listener).enterComparative_tail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonG3Listener ) ((PythonG3Listener)listener).exitComparative_tail(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonG3Visitor ) return ((PythonG3Visitor<? extends T>)visitor).visitComparative_tail(this);
			else return visitor.visitChildren(this);
		}
	}
